[update] スタイル調整

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,11 +22,15 @@ img {
   box-sizing: border-box;
 }
 
+h2{
+  margin-top: 2.3rem;
+  margin-bottom: 1rem;
+}
+
 .font-inter {
   font-family: 'Inter', sans-serif;
   font-weight: 800;
   letter-spacing: 0;
-  text-transform: uppercase;
 }
 
 .container {
